tests/negative/regex_bad_comptime.lev
comptime Array<int> BAD = regex::compileProgram("[", "");
console.writeln(BAD.length());
